table && material ui

--- a/src/gui/templates/base.html.jinja2
+++ b/src/gui/templates/base.html.jinja2
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>RPE segmentation - {% block title %}{% endblock %}</title>
     {# <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> #}
 </head>
@@ -18,7 +20,8 @@
         {% endblock %}
     </main>
     <footer>
-        <p>&copy; 2023 RPE Segmentation</p>
+        <p>&copy; 2024 RPE Segmentation</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
