--- a/src/gui/templates/components/samples_table.html.jinja2
+++ b/src/gui/templates/components/samples_table.html.jinja2
@@ -1,10 +1,18 @@
+{% macro samples_table(image_data) -%}
 <div id="samples-table">
     <table>
-    {% for image in image_data %}
-    <tr>
-        <td><img src="data:image/png;base64, {{ image }}" alt="Home Page Image" style="height:70px;width:70px"></td>
-        <td><button>Analyze</button></td>
-    </tr>
-    {% endfor %}
+        <thead>
+          <tr>
+              <th>Sample</th>
+              <th>Analyze</th>
+          </tr>
+        </thead>
+        {% for image in image_data %}
+        <tr>
+            <td><img src="data:image/png;base64, {{ image }}" alt="Home Page Image" style="height:70px;width:70px"></td>
+            <td><button>Analyze</button></td>
+        </tr>
+        {% endfor %}
     </table>
 </div>
+{%- endmacro %}
