--- a/src/gui/templates/base.html.jinja2
+++ b/src/gui/templates/base.html.jinja2
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      <link type="text/css" rel="stylesheet" href="../static/css/materialize.min.css"  media="screen,projection"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>RPE segmentation - {% block title %}{% endblock %}</title>
     {# <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> #}
@@ -22,6 +22,6 @@
     <footer>
         <p>&copy; 2024 RPE Segmentation</p>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="../static/js/materialize.min.js"></script>
 </body>
 </html>
