--- a/src/gui/static/css/utils.css
+++ b/src/gui/static/css/utils.css
@@ -460,3 +460,11 @@ button {
     outline: 0px !important;
     box-shadow: none !important;
 }
+
+:where(button, [type=submit], [type=reset], [type=button], [role=button])[hx-disable],
+:where(fieldset[hx-disable]) :is(button, [type=submit], [type=button], [type=reset], [role=button]) {
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: not-allowed;
+    text-decoration: none;
+}
